# cstring

./: .gitignore  CMakeLists.txt  build_cmake.sh  clean_cmake.sh  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_scratch_tests.sh  run_all_unit_tests.sh
examples/: CMakeLists.txt
include/cstring/: cstring.h
projects/cstring.core/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt
test/component/test.component.cstring_readline/: CMakeLists.txt
test/component/test.component.cstring_writeline/: CMakeLists.txt
test/scratch/test.scratch.auto_buffer/: CMakeLists.txt
test/scratch/test.scratch.cstring/: CMakeLists.txt
test/scratch/test.scratch.cstring_create/: CMakeLists.txt  test.scratch.cstring_create.c
test/scratch/test.scratch.cstring_vector/: CMakeLists.txt  test.scratch.cstring_vector.c
test/unit/test.unit.cstring.1/: CMakeLists.txt  test.unit.cstring.1.cpp
test/unit/test.unit.cstring.2/: CMakeLists.txt  test.unit.cstring.2.cpp
test/unit/test.unit.cstring.auto_buffer/: CMakeLists.txt  test.unit.cstring.auto_buffer.cpp
test/unit/test.unit.cstring.cstring_getStatusCodeString/: CMakeLists.txt  test.unit.cstring.cstring_getStatusCodeString.cpp
test/unit/test.unit.cstring.cstring_vector/: CMakeLists.txt
